--- a/packages/amplify-ui-components/src/components/amplify-sign-up/amplify-sign-up.scss
+++ b/packages/amplify-ui-components/src/components/amplify-sign-up/amplify-sign-up.scss
@@ -22,7 +22,7 @@
     align-items: baseline;
   }
 
-  * + * {
-    margin-bottom: 15px;
+  * {
+    margin-bottom: 10px;
   }
 }
